Fixed textarea width on mobile

--- a/app/assets/stylesheets/vendor_overrides.scss
+++ b/app/assets/stylesheets/vendor_overrides.scss
@@ -227,7 +227,8 @@ aside {
   }
 
   .account input[type="text"],
-  .account input[type="password"]{
+  .account input[type="password"],
+  .account .textarea textarea {
     width: 100%;
   }
 
